--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -14,7 +14,7 @@
        - name: Checkout source code
          uses: actions/checkout@v2
          with:
-           repository: https://github.com/angelobryan1/SampleRepoOne.git
+           repository: 'https://github.com/angelobryan1/SampleRepoOne.git'
            ref: main
           
           
