--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -21,5 +21,5 @@
        - name: Push changes to target repository
          run: |
            cd ${{ github.workspace }}
-           git remote add target angelobryan1/SampleRepo2
+           git remote add target https://github.com/angelobryan1/SampleRepo2.git
            git push target HEAD:main
