--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -16,10 +16,16 @@
          with:
            repository: angelobryan1/SampleRepoOne
            ref: main
-          
-          
-       - name: Push changes to target repository
+       
+       - name: Set Git config and authentication
          run: |
-           cd ${{ github.workspace }}
+           git config --global user.name "angelobryan1"
+           git config --global user.email "angelo072394@gmail.com"
            git remote add target https://github.com/angelobryan1/SampleRepo2.git
+           
+       - name: Change directory to workspace
+         run: cd ${{ github.workspace }}
+          
+       - name: Push changes
+         run: |
            git push target HEAD:main
