--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -29,6 +29,7 @@
        - name: Sync Branches
          run: |
            for branch in $(git branch --all | grep -v HEAD); do
+             echo "WEEEEEEEEEE  $branch"
              if git rev-parse --quiet --verify destination/$branch; then
                git merge destination/$branch --allow-unrelated-histories -m "Merge changes from destination repository"
                git push destination HEAD
