--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -30,6 +30,7 @@
          run: |
            for branch in $(git branch --all | grep -v HEAD); do
              echo "WEEEEEEEEEE  $branch"
+             git remote show origin
              if git rev-parse --quiet --verify destination/$branch; then
                git merge destination/$branch --allow-unrelated-histories -m "Merge changes from destination repository"
                git push destination HEAD
