--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -9,32 +9,25 @@
  jobs:
    sync:
      runs-on: ubuntu-latest
-    
-    
+   
      steps:
        - name: Checkout source code
          uses: actions/checkout@v2
+         with:
+           repository: angelobryan1/SampleRepo2
+           ref: main
        
-       - name: Set Git config and authentication
-         run: |
-           git config --global user.name "angelobryan1"
-           git config --global user.email "angelo072394@gmail.com"
+       - name: Add Source Repository as Remote
+         run: git remote add source angelobryan1/SampleRepoOne
         
-       - name: Add Destination Remote
-         run: git remote add destination https://github.com/angelobryan1/SampleRepo2.git
-           
-       - name: Fetch Destination Branches
-         run: git fetch destination
+       - name: Fetch Source Repository
+         run: git fetch source
          
-       - name: Sync Branches
-         run: |
-           for branch in $(git branch --all | grep -v HEAD); do
-             echo "WEEEEEEEEEE  $branch"
-             git remote show origin
-             if git rev-parse --quiet --verify destination/$branch; then
-               git merge destination/$branch --allow-unrelated-histories -m "Merge changes from destination repository"
-               git push destination HEAD
-             else
-               echo "Branch $branch does not exist in the destination reepository."
-             fi
-           done
+       - name: Merge Source Repository
+         run: git fetch source
+         
+       - name: Merge Source Repository into Destination
+         run: git merge source/main
+         
+       - name: Push Merged Changes
+         run: git push origin main
