--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -1,10 +1,19 @@
+ name: Sync Code Changes
+
+
+ on:
+   push:
+     branches: 
+       - main
+
+
 jobs:
   assign:
     runs-on: ubuntu-latest
 steps:
-- name: Assign user
+  - name: Assign user
 env:
-PR_NUMBER: ${{ github.event.pull_request.number }}
-run: |
-curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -X POST -d '{"assignees": ["oldskool"]}' 
-https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${PR_NUMBER}/assignees
+  PR_NUMBER: ${{ github.event.pull_request.number }}
+  run: |
+    curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -X POST -d '{"assignees": ["oldskool"]}' 
+    https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${PR_NUMBER}/assignees
