--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,14 +18,9 @@
            ref: main
        
        - name: Configure SSH
-         run: |
-           mkdir -p ~/.ssh
-           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-           chmod 600 ~/.ssh/id_rsa
-           ssh-keyscan $SSH_HOST >> ~/.ssh/known_hosts
-       
-       - name: Run SSH command
-         run: ssh $SSH_USERNAME@$SSH_HOST 'echo "Hello, world!"'
+         uses: webfactory/ssh-agent@v0.5.3
+         with:
+           ssh-private-key: ${{ secrets.SSH_PRRIVATE_KEY }}
          
        - name: Merge Source Repository into Destination
          run: |
