--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,7 +20,7 @@
        - name: Configure SSH
          uses: webfactory/ssh-agent@v0.5.3
          with:
-           ssh-private-key: ${{ secrets.SSH_PRRIVATE_KEY }}
+           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
          
        - name: Merge Source Repository into Destination
          run: |
