--- a/.github/workflows/Repo1actions.yml
+++ b/.github/workflows/Repo1actions.yml
@@ -1,4 +1,4 @@
- name: Sync Code Changes
+ name: Push Event
 
 
  on:
@@ -11,22 +11,12 @@
      runs-on: ubuntu-latest
    
      steps:
-       - name: Checkout source code
+       - name: Checkout Repo SampleRepoOne
          uses: actions/checkout@v2
-         with:
-           repository: angelobryan1/SampleRepo2
-           ref: main
        
-       - name: Configure SSH
-         uses: webfactory/ssh-agent@v0.5.3
+       - name: Trigger Workflow in Repo A
+         uses: octokit/reequest-action@v2.x
          with:
-           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-         
-       - name: Merge Source Repository into Destination
-         run: |
-           git remote add source git@github.com:angelobryan1/SampleRepoOne
-           git fetch source
-           git merge source/main
-         
-       - name: Push Merged Changes
-         run: git push origin main
+           route: POST /repos/angelobryan1/SampleRepo2/dispatches
+           token: ${{ secrets.REPO_A_ACCESS_TOKEN }}
+           event_type: repo-b-push-event
