--- a/.github/workflows/Repo2actions.yml
+++ b/.github/workflows/Repo2actions.yml
@@ -1,32 +1,14 @@
- name: Sync Code Changes
-
+ name: Trigger Worrkflow in Repo A
 
  on:
-   push:
-     branches: 
-       - main
-
- jobs:
-   sync:
-     runs-on: ubuntu-latest
-   
-     steps:
-       - name: Checkout source code
-         uses: actions/checkout@v2
-         with:
-           repository: angelobryan1/SampleRepo2
-           ref: main
+   repository_dispatch:
+     types:
+       - repo-b-push-event
        
-       - name: Configure SSH
-         uses: webfactory/ssh-agent@v0.5.3
-         with:
-           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-         
-       - name: Merge Source Repository into Destination
-         run: |
-           git remote add source git@github.com:angelobryan1/SampleRepoOne
-           git fetch source
-           git merge source/main
-         
-       - name: Push Merged Changes
-         run: git push origin main
+ jobs:
+  build:
+     runs-on: ubuntu-latest
+     
+     steps:
+       - name: Checkout SampleRepo2
+         uses: actions/checkout@v2
