--- a/.github/workflows/Repo1actions.yml
+++ b/.github/workflows/Repo1actions.yml
@@ -15,7 +15,7 @@
          uses: actions/checkout@v2
        
        - name: Trigger Workflow in Repo A
-         uses: octokit/reequest-action@v2.x
+         uses: octokit/request-action@v2.x
          with:
            route: POST /repos/angelobryan1/SampleRepo2/dispatches
            token: ${{ secrets.REPO_A_ACCESS_TOKEN }}
