--- a/.github/workflows/Repo1actions.yml
+++ b/.github/workflows/Repo1actions.yml
@@ -20,7 +20,7 @@
            owner: angelobryan1
            repo: SampleRepo2
            github_token: ${{ secrets.G_ACCESS_TOKEN }}
-           workflow_file_name: main.yml
+           workflow_file_name: Repo2actions.yml
            ref: main
        - name: Deploy SampleRepo2
          run: |
