--- a/.github/workflows/Repo2actions.yml
+++ b/.github/workflows/Repo2actions.yml
@@ -12,6 +12,9 @@
      runs-on: ubuntu-latest
      
      steps:
+       - name: Checkout repository
+         uses: actions/checkout@v2
+         
        - name: Fetching SampleRepoOne
          run: |
            echo "Fetching SampleRepoOne"
